initial fitness according to initial flight sequence from controller, final fitness values bugfix